--- a/KidKinder/KidKinder.csproj
+++ b/KidKinder/KidKinder.csproj
@@ -133,6 +133,10 @@
     <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\DashboardController.cs" />
     <Compile Include="Controllers\DefaultController.cs" />
+    <Compile Include="Controllers\ErrorPageController.cs" />
+    <Compile Include="Controllers\GalleryController.cs" />
+    <Compile Include="Controllers\GoogleChartController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\MessageController.cs" />
     <Compile Include="Controllers\ParentController.cs" />
     <Compile Include="Controllers\ServiceController.cs" />
@@ -181,12 +185,29 @@
     <Compile Include="Migrations\202402211954287_uptTechWork.designer.cs">
       <DependentUpon>202402211954287_uptTechWork.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202402221059123_mig4.cs" />
+    <Compile Include="Migrations\202402221059123_mig4.designer.cs">
+      <DependentUpon>202402221059123_mig4.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202402221105144_mig5.cs" />
+    <Compile Include="Migrations\202402221105144_mig5.designer.cs">
+      <DependentUpon>202402221105144_mig5.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202402221113304_mig6.cs" />
+    <Compile Include="Migrations\202402221113304_mig6.designer.cs">
+      <DependentUpon>202402221113304_mig6.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202402281424092_galleryStatus.cs" />
+    <Compile Include="Migrations\202402281424092_galleryStatus.designer.cs">
+      <DependentUpon>202402281424092_galleryStatus.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Entities\About.cs" />
     <Compile Include="Models\Entities\AboutList.cs" />
     <Compile Include="Models\Entities\Address.cs" />
     <Compile Include="Models\Entities\Admin.cs" />
     <Compile Include="Models\Entities\BookASeat.cs" />
+    <Compile Include="Models\Entities\Branch.cs" />
     <Compile Include="Models\Entities\ClassRoom.cs" />
     <Compile Include="Models\Entities\Communication.cs" />
     <Compile Include="Models\Entities\Contact.cs" />
@@ -227,6 +248,10 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Template\colordib\css\style.css" />
+    <Content Include="Template\colordib\img\bg.jpg" />
+    <Content Include="Template\colordib\index.html" />
+    <Content Include="Template\colordib\readme.txt" />
     <Content Include="Template\KidAdmin\accordion.html" />
     <Content Include="Template\KidAdmin\assets\css\animate.css\css\animate.css" />
     <Content Include="Template\KidAdmin\assets\css\bootstrap\css\bootstrap.min.css" />
@@ -494,6 +519,18 @@
     <Content Include="Template\KidKinder\READ-ME.txt" />
     <Content Include="Template\KidKinder\single.html" />
     <Content Include="Template\KidKinder\team.html" />
+    <Content Include="Template\Login\log.css" />
+    <Content Include="Template\Login\log.js" />
+    <Content Include="Template\StayishMap\assets\favicon.ico" />
+    <Content Include="Template\StayishMap\assets\img\bg-callout.jpg" />
+    <Content Include="Template\StayishMap\assets\img\bg-masthead.jpg" />
+    <Content Include="Template\StayishMap\assets\img\portfolio-1.jpg" />
+    <Content Include="Template\StayishMap\assets\img\portfolio-2.jpg" />
+    <Content Include="Template\StayishMap\assets\img\portfolio-3.jpg" />
+    <Content Include="Template\StayishMap\assets\img\portfolio-4.jpg" />
+    <Content Include="Template\StayishMap\css\styles.css" />
+    <Content Include="Template\StayishMap\index.html" />
+    <Content Include="Template\StayishMap\js\scripts.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -504,7 +541,6 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
-    <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Template\KidKinder\lib\flaticon\font\Flaticon.ttf" />
     <Content Include="Template\KidKinder\lib\flaticon\font\Flaticon.woff" />
     <Content Include="Template\KidKinder\lib\flaticon\font\Flaticon.woff2" />
@@ -709,6 +745,12 @@
     <Content Include="Views\Message\partialBring.cshtml" />
     <Content Include="Views\Message\partialCreate.cshtml" />
     <Content Include="Views\Message\OutBox.cshtml" />
+    <Content Include="Views\Login\Log.cshtml" />
+    <Content Include="Views\ErrorPage\Page404.cshtml" />
+    <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\Gallery\Home.cshtml" />
+    <Content Include="Views\Gallery\Create.cshtml" />
+    <Content Include="Views\GoogleChart\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -756,6 +798,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202402211954287_uptTechWork.resx">
       <DependentUpon>202402211954287_uptTechWork.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202402221059123_mig4.resx">
+      <DependentUpon>202402221059123_mig4.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202402221105144_mig5.resx">
+      <DependentUpon>202402221105144_mig5.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202402221113304_mig6.resx">
+      <DependentUpon>202402221113304_mig6.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202402281424092_galleryStatus.resx">
+      <DependentUpon>202402281424092_galleryStatus.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
